<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

     <TextView
        android:id="@+id/testText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/test_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color" />

        <Button
            android:id="@+id/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red" />

        <Button
            android:id="@+id/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green" />

        <Button
            android:id="@+id/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size" />

        <Button
            android:id="@+id/zeng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zeng" />

        <Button
            android:id="@+id/suo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/yang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yang" />

        <Button
            android:id="@+id/cu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cu" />

        <Button
            android:id="@+id/xie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xie" />

        <Button
            android:id="@+id/mo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/nei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nei" />

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

</LinearLayout>